minor fix #13 add [texture] noise (missing file 808df20) refactor [color-palette] del log refactor [base] move variability logic (p, minor, two-columns) upd [logos-graft] add main wbi upd [projects] (missing color-palette line 2f03f37) upd [modifier] add with-transition

--- a/styles/base-items/const.css
+++ b/styles/base-items/const.css
@@ -47,6 +47,10 @@
   --gap-detail: 6px;
 
   --border-radius: 20px;
+  
+  /* Кегли */
+  --main-font-size: 32px;
+  --minor-font-size: 20px;
 }
 
 svg {
@@ -72,5 +76,13 @@ svg {
   svg {
     --draft-color: var(--white);
     --draft-invert-color: var(--black);
+  }
+}
+
+
+@media (max-width: 800px) {
+  :root  {
+    --main-font-size: 24px;
+    --minor-font-size: 16px;
   }
 }
