--- a/styles/base-items/modifier.css
+++ b/styles/base-items/modifier.css
@@ -10,6 +10,12 @@
   border-radius: var(--border-radius);
 }
 
+.with-transition {
+  -webkit-transition: all 0.2s cubic-bezier(0.75, 0.35, 0.4, 0.99);
+  -o-transition: all 0.2s cubic-bezier(0.75, 0.35, 0.4, 0.99);
+  transition: all 0.2s cubic-bezier(0.75, 0.35, 0.4, 0.99);
+}
+
 .center {
   text-align: center;
 }
